# QR_TeleBot

./: Dockerfile  Makefile  docker-compose.yml  main.py  pyproject.toml
app/bot/: bot_instance.py
app/message_handlers/: file_handler.py  url_handler.py  welcome_message.py
app/services/: pdf_service.py  qr_service.py  url_service.py
